// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assetsManager reducer sould POLLS_INIT 1`] = `
{
  "emptyModel": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isInited": true,
  "isPending": false,
  "isSelected": false,
  "leftToFetch": 0,
  "list": {},
  "selected": null,
  "timestamp": null,
  "transactionHash": null,
  "voteLimitInTIME": null
}
`;

exports[`assetsManager reducer sould handle POLLS_CREATE 1`] = `
{
  "emptyModel": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isInited": false,
  "isPending": false,
  "isSelected": false,
  "leftToFetch": 0,
  "list": {
    "1": {
      "files": [],
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "memberVote": null,
      "poll": {
        "active": false,
        "deadline": null,
        "description": "",
        "files": null,
        "hash": null,
        "id": 1,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isInited": false,
        "isPending": false,
        "isSelected": false,
        "isTransaction": false,
        "options": [
          "Support",
          "Decline"
        ],
        "owner": null,
        "published": null,
        "status": false,
        "timestamp": null,
        "title": "",
        "transactionHash": null,
        "voteLimitInTIME": null
      },
      "shareholdersCount": "0",
      "statistics": [],
      "timestamp": null,
      "totalSupply": "0",
      "transactionHash": null,
      "votes": []
    }
  },
  "selected": null,
  "timestamp": null,
  "transactionHash": null,
  "voteLimitInTIME": null
}
`;

exports[`assetsManager reducer sould handle POLLS_LIST 1`] = `
{
  "emptyModel": null,
  "id": null,
  "isFailed": false,
  "isFetched": true,
  "isFetching": false,
  "isInited": false,
  "isPending": false,
  "isSelected": false,
  "leftToFetch": 0,
  "list": {
    "emptyModel": null,
    "id": null,
    "isFailed": false,
    "isFetched": false,
    "isFetching": false,
    "isInited": false,
    "isPending": false,
    "isSelected": false,
    "leftToFetch": 0,
    "list": {},
    "selected": null,
    "timestamp": null,
    "transactionHash": null,
    "voteLimitInTIME": null
  },
  "selected": null,
  "timestamp": null,
  "transactionHash": null,
  "voteLimitInTIME": null
}
`;

exports[`assetsManager reducer sould handle POLLS_LOAD 1`] = `
{
  "emptyModel": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": true,
  "isInited": false,
  "isPending": false,
  "isSelected": false,
  "leftToFetch": 0,
  "list": {},
  "selected": null,
  "timestamp": null,
  "transactionHash": null,
  "voteLimitInTIME": null
}
`;

exports[`assetsManager reducer sould handle POLLS_REMOVE 1`] = `
{
  "emptyModel": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isInited": false,
  "isPending": false,
  "isSelected": false,
  "leftToFetch": 0,
  "list": {},
  "selected": null,
  "timestamp": null,
  "transactionHash": null,
  "voteLimitInTIME": null
}
`;

exports[`assetsManager reducer sould handle POLLS_REMOVE_STUB 1`] = `
{
  "emptyModel": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isInited": false,
  "isPending": false,
  "isSelected": false,
  "leftToFetch": 0,
  "list": {},
  "selected": null,
  "timestamp": null,
  "transactionHash": null,
  "voteLimitInTIME": null
}
`;

exports[`assetsManager reducer sould handle POLLS_UPDATE 1`] = `
{
  "emptyModel": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isInited": false,
  "isPending": false,
  "isSelected": false,
  "leftToFetch": 0,
  "list": {
    "1": {
      "files": [],
      "id": null,
      "isFailed": false,
      "isFetched": false,
      "isFetching": false,
      "isInited": false,
      "isPending": false,
      "isSelected": false,
      "memberVote": null,
      "poll": {
        "active": false,
        "deadline": null,
        "description": "",
        "files": null,
        "hash": null,
        "id": 1,
        "isFailed": false,
        "isFetched": false,
        "isFetching": false,
        "isInited": false,
        "isPending": false,
        "isSelected": false,
        "isTransaction": false,
        "options": [
          "Support",
          "Decline"
        ],
        "owner": null,
        "published": null,
        "status": false,
        "timestamp": null,
        "title": "",
        "transactionHash": null,
        "voteLimitInTIME": null
      },
      "shareholdersCount": "0",
      "statistics": [],
      "timestamp": null,
      "totalSupply": "0",
      "transactionHash": null,
      "votes": []
    }
  },
  "selected": null,
  "timestamp": null,
  "transactionHash": null,
  "voteLimitInTIME": null
}
`;

exports[`assetsManager reducer sould handle POLLS_VOTE_LIMIT 1`] = `
{
  "emptyModel": null,
  "id": null,
  "isFailed": false,
  "isFetched": false,
  "isFetching": false,
  "isInited": false,
  "isPending": false,
  "isSelected": false,
  "leftToFetch": 0,
  "list": {},
  "selected": null,
  "timestamp": null,
  "transactionHash": null,
  "voteLimitInTIME": "1"
}
`;
